# car-price-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py  prediction.py  preprocess.py  schema.py
model/: model.pkl  scaler.pkl
notebooks/: model_development.ipynb
scripts/: update.sh
static/js/: faq.js  main.js
templates/: faq.html  index.html
