[project]
name = "car-prediction"
version = "0.1.0"
description = "Car price prediction API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "jinja2>=3.1.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "python-multipart",
    "python-dotenv",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []